--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
   <div class="welcome">
     <h2>Welcome &nbsp;<img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/waving-hand.png?raw=true" width="30px" alt="Welcome"></h2>
-    <p>Welcome to the <b>Jawad's Projects</b> page. Here you will see the complete description of each project. It includes the <b>Project Name</b>, <b>Skills</b> which are used in the project, <b>Role</b> during the project, <b>Job</b> in the project, <b>Overview</b> of the project, some important <b>Links</b> related to the projects, <b>Duration</b> of the project, <b>Challenges and Solutions</b> during the project, <b>Team Information</b>, <b>Achievements</b>, and some <b>Preview</b> related to the project</p>
+    <p>Welcome to <b>Jawad's Projects</b> page. Here, you'll find detailed descriptions of each project. To visit <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/"><b>Jawad's Portfolio</b></a> page, please click <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/"><b>here</b></a>. This page includes information on the <b>Project Name</b>, <b>Skills</b> utilized, <b>Role</b> during the project, <b>Job</b> responsibilities, <b>Overview</b> of the project, essential <b>Links</b>, project <b>Duration</b>, <b>Challenges and Solutions</b> faced, <b>Team Information</b>, <b>Achievements</b>, and project <b>Previews</b>.</p>
+
   </div>
   <section class="projects-details-section">
     <!-- Project 1 -->
@@ -349,17 +350,21 @@
         </ul>
       </div>
 
-      <div class="role">
-        <h3>Role:</h3>
-        <p>Data Parser</p>
-      </div>
       <div class="job">
         <h3>Job:</h3>
-        <p></p>
+        <p>Automatic login to a website and data parsing using the “Beautiful Soup” package.</p>
+      </div>
+
+      <div class="role">
+        <h3>Role:</h3>
+        <p>Python Developer</p>
       </div>
       <div class="overview">
         <h3>Overview:</h3>
-        <p>Details about Project 4...</p>
+        <ul>
+          <li>Automated the login process to a specific website with <strong>Python "requests"</strong>.</li>
+          <li>Utilized <strong>"BeautifulSoup"</strong> to skillfully inspect and extract the needed data from the HTML tree.</li>
+        </ul>
       </div>
       <div class="course-links">
         <h3>Link:</h3>
