--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 
   <div class="welcome">
     <h2>Welcome &nbsp;<img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/PNGs_and_other_files/waving-hand.png?raw=true" width="30px" alt="Welcome"></h2>
-    <p>Welcome to <b>Jawad's Projects</b> page. Here, you'll find detailed descriptions of each project. To visit <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/"><b>Jawad's Portfolio</b></a> page, please click <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/"><b>here</b></a>. This page includes information on the <b>Project Name</b>, <b>Skills</b> utilized, <b>Role</b> during the project, <b>Job</b> responsibilities, <b>Overview</b> of the project, essential <b>Links</b>, project <b>Duration</b>, <b>Challenges and Solutions</b> faced, <b>Team Information</b>, <b>Achievements</b>, and project <b>Previews</b>.</p>
+    <p>Welcome to <b>Jawad's Projects</b> page. Here, you'll find detailed descriptions of each project. To visit <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/" target="_blank"><b>Jawad's Portfolio</b></a> page, please click <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/" target="_blank"><b>here</b></a>. This page includes information on the <b>Project Name</b>, <b>Skills</b> utilized, <b>Role</b> during the project, <b>Job</b> responsibilities, <b>Overview</b> of the project, essential <b>Links</b>, project <b>Duration</b>, <b>Challenges and Solutions</b> faced, <b>Team Information</b>, <b>Achievements</b>, and project <b>Previews</b>.</p>
 
   </div>
   <section class="projects-details-section">
     <!-- Project 1 -->
+
     <div id="data-analysis" class="project">
       <h2>1. Data Analysis</h2>
 
@@ -102,8 +103,8 @@
           </thead>
           <tbody>
             <tr>
-              <td>Handling large datasets on the free Posit Cloud (online R environment) account.</td>
-              <td>Reduced the range of the Data.</td>
+              <td>Handling <b>large datasets</b> on the free Posit Cloud (online R environment) account.</td>
+              <td><b>Reduced</b> the <b>range of the Data.</b></td>
             </tr>
           </tbody>
         </table>
@@ -140,6 +141,7 @@
     </div>
 
     <!-- Project 2 -->
+
     <div id="website-portfolio" class="project">
       <h2>2. Single Page Website Portfolio</h2>
 
@@ -199,16 +201,16 @@
           </thead>
           <tbody>
             <tr>
-              <td>Less knowledge of HTML, CSS, and JavaScript</td>
-              <td>First improved skills in HTML, CSS, and JavaScript</td>
+              <td><b>Less knowledge</b> of HTML, CSS, and JavaScript</td>
+              <td>First <b>improved skills</b> in HTML, CSS, and JavaScript</td>
             </tr>
             <tr>
-              <td>Hosting my PNGs and publishing the portfolio.</td>
-              <td>Created some GitHub repositories to publish the portfolio (static website).</td>
+              <td><b>Hosting</b> my PNGs and <b>publishing the portfolio.</b></td>
+              <td>Created some <b>GitHub repositories</b> to publish the portfolio (static website).</td>
             </tr>
             <tr>
-              <td>The portfolio was looking good on big screens but bad response on smaller screens.</td>
-              <td>Learned some CSS codes to fit the site on smaller screens (mobile-responsive site).</td>
+              <td>The portfolio was looking good on big screens but <b>bad response on smaller screens</b>.</td>
+              <td>Learned some CSS codes to fit the site on smaller screens <b>(mobile-responsive site)</b>.</td>
             </tr>
           </tbody>
         </table>
@@ -239,6 +241,7 @@
     </div>
 
     <!-- Project 3 -->
+
     <div id="latex-compilation" class="project">
       <h2>3. Compiled Some Books with LaTeX</h2>
 
@@ -294,12 +297,12 @@
           </thead>
           <tbody>
             <tr>
-              <td>Zero knowledge of LateX programming.</td>
-              <td>Learned some basics to start compiling simple PDFs.</td>
+              <td><b>Zero knowledge</b> of <b>LaTeX</b> programming.</td>
+              <td><b>Learned some basics</b> to start compiling simple PDFs.</td>
             </tr>
             <tr>
-              <td>Too much time required to compile 4 books.</td>
-              <td>Balanced daily life with the project by planning substantial time, effort, and passion for the project.</td>
+              <td><b>Too much time</b> required to compile 4 books.</td>
+              <td><b>Balanced daily life</b> with the project by planning substantial time, effort, and passion for the project.</td>
             </tr>
           </tbody>
         </table>
@@ -345,6 +348,7 @@
           <li>requests</li>
           <li>Data Entry</li>
           <li>Presentation</li>
+          <li>Communication</li>
           <li>Data Extracting</li>
           <li>Data Organizing</li>
         </ul>
@@ -367,35 +371,52 @@
         </ul>
       </div>
       <div class="course-links">
-        <h3>Link:</h3>
+        <h3>Links:</h3>
         <ul>
-          <li></li>
-          <li></li>
+          <li>Click <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/tree/main/Projects/Python/Data_Parsing" target="_blank"><b>here</b></a> to visit the work done by <b>Jawad</b> on GitHub.</li>
+          <li>Please read the presentation <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Presentation.pdf" target="_blank"><b>here</b></a></li>
         </ul>
       </div>
       <div class="duration">
         <h3>Duration:</h3>
-        <p>July 2023 - December 2023</p>
+        <p>2 Weeks in Jan 2024</p>
       </div>
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p><b>Challenge:</b> Integrating with third-party APIs.</p>
-        <p><b>Solution:</b> Used robust error handling and data validation.</p>
+        <table>
+          <thead>
+            <tr>
+              <th>Challenge</th>
+              <th>Solution</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Navigating a <b>vast amount of study material and research</b> to ensure thorough comprehension to complete and present the project effectively.</td>
+              <td>Overcome the challenge by creating an <b>organized study plan</b> to distill essential information from extensive research.</td>
+            </tr>
+            <tr>
+              <td>Needed <b>significant time investment</b> to complete and present the project effectively to the client.</td>
+              <td><b>Aligned daily routines</b> with project demands by planning and investing extensive time, effort, and passion.</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
 
       <div class="client-team">
         <h3>Client/Team Information:</h3>
-        <p>Client: GHI Co.</p>
-        <p>Team: Emily Davis, Kevin Nguyen</p>
+        <p>Client: TU Dortmund University</p>
+        <p>Team: An Instructor and Jawad</p>
       </div>
 
       <div class="achievements">
         <h3>Key Achievements:</h3>
         <ul class="achievements-list">
-          <li>Successfully analyzed the Dataset.</li>
-          <li>Got some insightful findings.</li>
-          <li>Presented some recommendations.</li>
+          <li>Learned effectively how to use Python <b>requests</b> and <b>BeautifulSoup</b> libraries.</li>
+          <li>Completed the project on schedule following thorough research.</li>
+          <li>Crafted a highly effective and visually engaging presentation.</li>
+          <li>Executed a successful presentation and received supportive feedback.</li>
         </ul>
       </div>
 
