--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
         <h3>Links:</h3>
         <ul>
           <li>Click <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/tree/main/Projects/Python/Data_Parsing" target="_blank"><b>here</b></a> to visit the work done by <b>Jawad</b> on GitHub.</li>
-          <li>Please read the presentation <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Presentation.pdf" target="_blank"><b>here</b></a></li>
+          <li>You can read the presentation <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Presentation.pdf" target="_blank"><b>here</b></a></li>
         </ul>
       </div>
       <div class="duration">
@@ -422,8 +422,12 @@
 
       <div class="screenshot">
         <h3>Previews:</h3>
-        <img src="path/to/screenshot4-1.jpg" alt="Screenshot 1 of Mobile App Development project">
-        <img src="path/to/screenshot4-2.jpg" alt="Screenshot 2 of Mobile App Development project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Python_task.PNG?raw=true" alt="Project Statement">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Python_data1.PNG?raw=true" alt="Code1">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Python_data2.PNG?raw=true" alt="Code2">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Python_request.PNG?raw=true" alt="requests">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Python_step5.PNG?raw=true" alt="Step5">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Step6.PNG?raw=true" alt="Step6">
       </div>
     </div>
 
@@ -436,61 +440,93 @@
         <ul class="skills-list">
           <li>Teaching</li>
           <li>Management</li>
+          <li>Situation Handling</li>
+          <li>Communication</li>
           <li>Problem Solving</li>
-          <li>Critical Thinking</li>
           <li>Team Management</li>
+          <li>Critical Thinking</li>
+          <li>Creative Thinking</li>
+          <li>Time Management</li>
         </ul>
+      </div>
+
+      <div class="job">
+        <h3>Job:</h3>
+        <p>Develop and execute 20 educational lesson plans in a governmental institution within 45 days.</p>
       </div>
 
       <div class="role">
         <h3>Role:</h3>
         <p>College Teacher</p>
       </div>
-      <div class="job">
-        <h3>Job:</h3>
-        <p></p>
-      </div>
       <div class="overview">
         <h3>Overview:</h3>
-        <p>Details about Project 5...</p>
+        <ul>
+          <li><strong>Project:</strong> Successfully completed the hands-on teaching project at <a href="https://web.facebook.com/p/Govt-Boys-Inter-college-panjera-100063748788280/?_rdc=1&_rdr" target="_blank"><b>Government Boys Inter College Panjera</b></a>.</li>
+          <li><strong>Mentorship:</strong> Guided by Dr. Makhdoom Ali Sead, the esteemed <a href="https://uokajk.edu.pk/department/detail/department-of-education" target="_blank"><b>Head of the Department of Education</b></a> at the <a href="https://www.uokajk.edu.pk/" target="_blank"><b>University of Kotli AJK</b></a>.</li>
+          <li><strong>Practical Application:</strong> Translated theoretical knowledge into practical experience in a real classroom setting.</li>
+        </ul>
       </div>
       <div class="course-links">
-        <h3>Link:</h3>
+        <h3>Links:</h3>
         <ul>
-          <li></li>
-          <li></li>
+          <li>View the training certificate <a href="https://drive.google.com/file/d/1MOw66avz6z0fChn4Lz55zoYSm7lzpFO2/view?usp=sharing" target="_blank"><b>here</b></a></li>
+          <li>Visit the <b>Government College</b> <a href="https://web.facebook.com/p/Govt-Boys-Inter-college-panjera-100063748788280/?_rdc=1&_rdr" target="_blank"><b>here</b></a></li>
         </ul>
       </div>
       <div class="duration">
         <h3>Duration:</h3>
-        <p>October 2023 - March 2024</p>
+        <p>35 Days in Sep 2022</p>
       </div>
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p><b>Challenge:</b> Implementing secure payment gateway.</p>
-        <p><b>Solution:</b> Integrated with a reliable payment processor and used encryption.</p>
+        <table>
+          <thead>
+            <tr>
+              <th>Challenge</th>
+              <th>Solution</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><b>Time management</b> during the presentation of lessons.</td>
+              <td><b>Planned and managed the time</b> to present the lessons effectively.</td>
+            </tr>
+            <tr>
+              <td><b>Challenges</b> in maintaining <b>student attention</b> and managing classroom <b>behavior</b> during lessons</td>
+              <td><b>Collaborated</b> with <b>fellow teachers</b> to share strategies and implement effective techniques for maintaining student engagement and managing classroom behavior.</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
 
       <div class="client-team">
         <h3>Client/Team Information:</h3>
-        <p>Client: JKL Enterprises</p>
-        <p>Team: Rachel Green, Mike Scott</p>
+        <p>Client: Allama Iqbal Open University Islamabad</p>
+        <p>Team: Jawad, Dr. Makhdoom Ali Sead, Principal Tahir Hussain Shah, and fellow teachers.</p>
       </div>
 
       <div class="achievements">
         <h3>Key Achievements:</h3>
         <ul class="achievements-list">
-          <li>Successfully analyzed the Dataset.</li>
-          <li>Got some insightful findings.</li>
-          <li>Presented some recommendations.</li>
+          <li>Successfully planned and delivered the lessons.</li>
+          <li>Acquired some strategies and techniques to enhance student engagement and manage classroom behavior.</li>
+          <li>Significantly enhanced teaching and communication skills.</li>
+          <li>Actively participated in co-curricular activities.</li>
+
         </ul>
       </div>
 
       <div class="screenshot">
         <h3>Previews:</h3>
-        <img src="path/to/screenshot5-1.jpg" alt="Screenshot 1 of E-commerce Website project">
-        <img src="path/to/screenshot5-2.jpg" alt="Screenshot 2 of E-commerce Website project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/Lesson_objectives-min.PNG?raw=true" alt="Lesson Objectives">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/Lesson_intro-min.PNG?raw=true" alt="Lesson Intro">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/Lesson_plan_av_aids-min.PNG?raw=true" alt="Lesson AV Aids">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/GOVT_gate-min.PNG?raw=true" alt="College Gate">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/Teaching_certificate-min.PNG?raw=true" alt="Teaching Certificate">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/AIOU_screen-min.PNG?raw=true" alt="AIOU Web">
+
       </div>
     </div>
 
