--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
       <div class="job">
         <h3>Job:</h3>
-        <p>Develop and execute 20 educational lesson plans in a governmental institution within 45 days.</p>
+        <p>Develop and execute 50 educational lesson plans in a governmental institution within 4 Weeks.</p>
       </div>
 
       <div class="role">
@@ -476,7 +476,7 @@
       </div>
       <div class="duration">
         <h3>Duration:</h3>
-        <p>35 Days in Sep 2022</p>
+        <p>23 Days in Sep 2022</p>
       </div>
 
       <div class="challenges">
@@ -541,58 +541,85 @@
           <li>MS Office</li>
           <li>Data Entry</li>
           <li>Spreadsheets</li>
-          <li>Retailer</li>
+          <li>Wholesaling</li>
+          <li>Communication</li>
         </ul>
+      </div>
+
+      <div class="job">
+        <h3>Job:</h3>
+        <p>Increase the revenue of "Sakhi Autos Kotli" (a wholesale shop) with the implementation of strategic business practices.</p>
       </div>
 
       <div class="role">
         <h3>Role:</h3>
         <p>Wholesale Manager</p>
       </div>
-      <div class="job">
-        <h3>Job:</h3>
-        <p></p>
-      </div>
       <div class="overview">
         <h3>Overview:</h3>
-        <p>Details about Project 6...</p>
+        <ul>
+          <li><strong>Expertise Applied:</strong> Boosted the profitability of <b><a href="https://www.google.com/maps/place/Sakhi+auto+kotli/@33.5166834,73.9105571,15z/data=!4m6!3m5!1s0x38e02127ce223a2d:0x1b8e64ce2f955863!8m2!3d33.5166834!4d73.9105571!16s%2Fg%2F11fnqmg68f?entry=ttu" target="_blank">Sakhi Autos Kotli</a></b>, a wholesale shop.</li>
+          <li><strong>Techniques Implemented:</strong> Enhanced financial performance and drove growth for <b>Sakhi Autos Kotli</b>.</li>
+        </ul>
+      </div>
+
+      <div class="course-links">
+        <h3>Links:</h3>
+        <ul>
+          <li>If you wanna visit the <b>Sakhi Autos Kotli</b> please click <a href="https://www.google.com/maps/place/Sakhi+auto+kotli/@33.5166834,73.9105571,15z/data=!4m6!3m5!1s0x38e02127ce223a2d:0x1b8e64ce2f955863!8m2!3d33.5166834!4d73.9105571!16s%2Fg%2F11fnqmg68f?entry=ttu" target="_blank"><b>here</b></a>.</li>
+        </ul>
       </div>
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>February 2024 - July 2024</p>
+        <p>Feb 2022 - Aug 2022</p>
       </div>
 
       <div class="challenges">
         <h3>Challenges and Solutions:</h3>
-        <p><b>Challenge:</b> Balancing game difficulty and user engagement.</p>
-        <p><b>Solution:</b> Implemented adaptive difficulty and user feedback loops.</p>
+        <table>
+          <thead>
+            <tr>
+              <th>Challenge</th>
+              <th>Solution</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><b>Limited</b> proficiency in <b>business communication skills</b>.</td>
+              <td>Developed business communication skills through <b>collaboration with team members</b> and by <b>studying</b> effective client interaction <b>techniques</b>.</td>
+            </tr>
+            <tr>
+              <td><b>Faced difficulties in <b>learning and memorizing</b> the names of over <b>500 products</b>.</td>
+              <td><b>Dedicated attention</b> and successfully mastered the product names within a <b>few weeks</b>.</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
 
       <div class="client-team">
         <h3>Client/Team Information:</h3>
-        <p>Client: MNO Studios</p>
-        <p>Team: Laura Johnson, Chris Evans</p>
+        <p>Client: Malik Usman</p>
+        <p>Team: Jawad, Abbas, Malik Haider, Malik Usman, Malik Abdul-Rehman, Asif</p>
       </div>
 
       <div class="achievements">
         <h3>Key Achievements:</h3>
         <ul class="achievements-list">
-          <li>Successfully analyzed the Dataset.</li>
-          <li>Got some insightful findings.</li>
-          <li>Presented some recommendations.</li>
+          <li>Gained comprehensive knowledge of all product names.</li>
+          <li>Developed strong business and communication skills for effective client interactions.</li>
+          <li>Successfully boosted the profit margin.</li>
         </ul>
       </div>
 
       <div class="screenshot">
         <h3>Previews:</h3>
-        <img src="path/to/screenshot6-1.jpg" alt="Screenshot 1 of Game Development project">
-        <img src="path/to/screenshot6-2.jpg" alt="Screenshot 2 of Game Development project">
+        <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Sakhi_Autos_Kotli/Sakhi_Autos_Kotli.PNG?raw=true" alt="Address of Sakhi Autos Kotli">
       </div>
     </div>
 
   </section>
   <button id="scrollToTopBtn" title="Go to top">&#8679;</button>
 </body>
-
+  
 </html>
