--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 
     <div id="data-analysis" class="project">
       <h2>1. Data Analysis</h2>
-
       <div class="skills">
         <h3>Skills Used:</h3>
         <ul class="skills-list">
@@ -78,18 +77,18 @@
         </ul>
       </div>
 
-      <div class="course-links">
+      <div class="links">
         <h3>Links:</h3>
         <ul>
-          <li><a href="https://posit.cloud/content/6326840"><b>Click here</b></a> to view the work done by <strong>Jawad</strong> (if you have a Posit Cloud account) or <a href="https://www.coursera.org/learn/google-data-analytics-capstone?specialization=google-data-analytics" target="_blank"><b>Click here</b></a> to visit the <b>Complete Case Study of the Data Analysis</b></li>
-          <li><a href="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/view?usp=sharing" target="_blank"><b>Click here</b></a> to view the <b>Certificate</b></li>
-          <li><a href="https://drive.google.com/file/d/1sd870Gn2tKf7jzW8PsRsGVKHh4VgcfXF/view?usp=sharing" target="_blank"><b>Click here</b></a> to view the <b>Data Analytics Professional Certificate</b></li>
+          <li><a href="https://posit.cloud/content/6326840"><b>Click here</b></a> to view the work done by <strong>Jawad</strong> (if you have a Posit Cloud account) or <a href="https://www.coursera.org/learn/google-data-analytics-capstone?specialization=google-data-analytics" target="_blank"><b>Click here</b></a> to visit the <b>Complete Case Study of the Data Analysis</b>.</li>
+          <li><a href="https://drive.google.com/file/d/1oo9npgvX1E2rXsWNnNsDbCwPqKatOhIJ/view?usp=sharing" target="_blank"><b>Click here</b></a> to view the <b>Certificate</b>.</li>
+          <li><a href="https://drive.google.com/file/d/1sd870Gn2tKf7jzW8PsRsGVKHh4VgcfXF/view?usp=sharing" target="_blank"><b>Click here</b></a> to view the <b>Data Analytics Professional Certificate</b>.</li>
         </ul>
       </div>
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>6 Days in August 2023</p>
+        <p>6 Days in Aug 2023</p>
       </div>
 
       <div class="challenges">
@@ -174,20 +173,20 @@
         </ul>
       </div>
 
-      <div class="course-links">
+      <div class="links">
         <h3>Links:</h3>
         <ul>
-          <li>Visit the work done by Jawad on GitHub <a href="https://github.com/Jawad-Khalil/Introduction_to_Web_Development_with_HTML_CSS_JavaScript" target="_blank"><b>here</b></a></li>
-          <li>Visit the complete case <a href="https://www.coursera.org/learn/introduction-to-web-development-with-html-css-javacript" target="_blank"><b>here</b></a></li>
-          <li>Visit the project <b>Portfolio <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/">here</a></b></li>
-          <li>Visit <b>GitHub Site Portfolio <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/">here</a></b></li>
+          <li>Visit the work done by Jawad on GitHub <a href="https://github.com/Jawad-Khalil/Introduction_to_Web_Development_with_HTML_CSS_JavaScript" target="_blank"><b>here</b></a>.</li>
+          <li>Visit the complete case <a href="https://www.coursera.org/learn/introduction-to-web-development-with-html-css-javacript" target="_blank"><b>here</b></a>.</li>
+          <li>Visit the project <b>Portfolio <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/">here</a></b>.</li>
+          <li>Visit <b>GitHub Site Portfolio <a href="https://jawad-khalil.github.io/Jawad_Khalil_Portfolio/">here</a></b>.</li>
           <li>Visit the Portfolio <b>Project Page here</b></li>
         </ul>
       </div>
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>10 days in March 2024.</p>
+        <p>10 days in Mar 2024.</p>
       </div>
 
       <div class="challenges">
@@ -201,8 +200,8 @@
           </thead>
           <tbody>
             <tr>
-              <td><b>Less knowledge</b> of HTML, CSS, and JavaScript</td>
-              <td>First <b>improved skills</b> in HTML, CSS, and JavaScript</td>
+              <td><b>Less knowledge</b> of HTML, CSS, and JavaScript.</td>
+              <td>First <b>improved skills</b> in HTML, CSS, and JavaScript.</td>
             </tr>
             <tr>
               <td><b>Hosting</b> my PNGs and <b>publishing the portfolio.</b></td>
@@ -226,8 +225,8 @@
         <h3>Key Achievements:</h3>
         <ul class="achievements-list">
           <li>Created a simple portfolio and a GitHub hosted portfolio.</li>
-          <li>Learned some advance features of GitHub</li>
-          <li>Made the portfolios mobile-responsive</li>
+          <li>Learned some advance features of GitHub.</li>
+          <li>Made the portfolios mobile-responsive.</li>
         </ul>
       </div>
 
@@ -283,7 +282,7 @@
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>December 2023 - Jul 2024</p>
+        <p>7 Months (December 2023 - Jul 2024)</p>
       </div>
 
       <div class="challenges">
@@ -370,11 +369,11 @@
           <li>Utilized <strong>"BeautifulSoup"</strong> to skillfully inspect and extract the needed data from the HTML tree.</li>
         </ul>
       </div>
-      <div class="course-links">
+      <div class="links">
         <h3>Links:</h3>
         <ul>
           <li>Click <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/tree/main/Projects/Python/Data_Parsing" target="_blank"><b>here</b></a> to visit the work done by <b>Jawad</b> on GitHub.</li>
-          <li>You can read the presentation <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Presentation.pdf" target="_blank"><b>here</b></a></li>
+          <li>You can read the presentation <a href="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Presentation.pdf" target="_blank"><b>here</b></a>.</li>
         </ul>
       </div>
       <div class="duration">
@@ -452,7 +451,7 @@
 
       <div class="job">
         <h3>Job:</h3>
-        <p>Develop and execute 50 educational lesson plans in a governmental institution within 4 Weeks.</p>
+        <p>Develop and execute 30 educational lesson plans in a governmental institution within 4 Weeks.</p>
       </div>
 
       <div class="role">
@@ -467,11 +466,11 @@
           <li><strong>Practical Application:</strong> Translated theoretical knowledge into practical experience in a real classroom setting.</li>
         </ul>
       </div>
-      <div class="course-links">
+      <div class="links">
         <h3>Links:</h3>
         <ul>
-          <li>View the training certificate <a href="https://drive.google.com/file/d/1MOw66avz6z0fChn4Lz55zoYSm7lzpFO2/view?usp=sharing" target="_blank"><b>here</b></a></li>
-          <li>Visit the <b>Government College</b> <a href="https://web.facebook.com/p/Govt-Boys-Inter-college-panjera-100063748788280/?_rdc=1&_rdr" target="_blank"><b>here</b></a></li>
+          <li>View the training certificate <a href="https://drive.google.com/file/d/1MOw66avz6z0fChn4Lz55zoYSm7lzpFO2/view?usp=sharing" target="_blank"><b>here</b></a>.</li>
+          <li>Visit the <b>Government College</b> <a href="https://web.facebook.com/p/Govt-Boys-Inter-college-panjera-100063748788280/?_rdc=1&_rdr" target="_blank"><b>here</b></a>.</li>
         </ul>
       </div>
       <div class="duration">
@@ -494,7 +493,7 @@
               <td><b>Planned and managed the time</b> to present the lessons effectively.</td>
             </tr>
             <tr>
-              <td><b>Challenges</b> in maintaining <b>student attention</b> and managing classroom <b>behavior</b> during lessons</td>
+              <td><b>Challenges</b> in maintaining <b>student attention</b> and managing classroom <b>behavior</b> during lessons.</td>
               <td><b>Collaborated</b> with <b>fellow teachers</b> to share strategies and implement effective techniques for maintaining student engagement and managing classroom behavior.</td>
             </tr>
           </tbody>
@@ -563,7 +562,7 @@
         </ul>
       </div>
 
-      <div class="course-links">
+      <div class="links">
         <h3>Links:</h3>
         <ul>
           <li>If you wanna visit the <b>Sakhi Autos Kotli</b> please click <a href="https://www.google.com/maps/place/Sakhi+auto+kotli/@33.5166834,73.9105571,15z/data=!4m6!3m5!1s0x38e02127ce223a2d:0x1b8e64ce2f955863!8m2!3d33.5166834!4d73.9105571!16s%2Fg%2F11fnqmg68f?entry=ttu" target="_blank"><b>here</b></a>.</li>
@@ -572,7 +571,7 @@
 
       <div class="duration">
         <h3>Duration:</h3>
-        <p>Feb 2022 - Aug 2022</p>
+        <p>6 Months (Feb 2022 - Aug 2022)</p>
       </div>
 
       <div class="challenges">
@@ -621,5 +620,5 @@
   </section>
   <button id="scrollToTopBtn" title="Go to top">&#8679;</button>
 </body>
-  
+
 </html>
