--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </ul>
       </div>
 
-      <div class="screenshot">
+      <div class="previews">
         <h3>Previews:</h3>
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide1.PNG?raw=true" alt="Slide1.PNG">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Google_Data_Analytics/Slide2.PNG?raw=true" alt="Slide2.PNG">
@@ -230,7 +230,7 @@
         </ul>
       </div>
 
-      <div class="screenshot">
+      <div class="previews">
         <h3>Previews:</h3>
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/HTML,_CSS,_and_JavaScript/simple_project.png?raw=true" style="width: 500px;" alt="Simple Portfolio">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/HTML,_CSS,_and_JavaScript/Portfolio_screenshot.png?raw=true" style="width: 255px;" alt="GitHub Portfolio Screenshot">
@@ -322,7 +322,7 @@
         </ul>
       </div>
 
-      <div class="screenshot">
+      <div class="previews">
         <h3>Previews:</h3>
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Latex/MATLAB_content.PNG?raw=true" alt="MATLAB Contents">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Latex/MATLAB_plotting.PNG?raw=true" alt="MATLAB Plotting">
@@ -419,7 +419,7 @@
         </ul>
       </div>
 
-      <div class="screenshot">
+      <div class="previews">
         <h3>Previews:</h3>
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Python_task.PNG?raw=true" alt="Project Statement">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Python/Data_Parsing/Python_data1.PNG?raw=true" alt="Code1">
@@ -517,7 +517,7 @@
         </ul>
       </div>
 
-      <div class="screenshot">
+      <div class="previews">
         <h3>Previews:</h3>
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/Lesson_objectives-min.PNG?raw=true" alt="Lesson Objectives">
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Teaching/Lesson_intro-min.PNG?raw=true" alt="Lesson Intro">
@@ -611,7 +611,7 @@
         </ul>
       </div>
 
-      <div class="screenshot">
+      <div class="previews">
         <h3>Previews:</h3>
         <img src="https://github.com/Jawad-Khalil/Jawad_Khalil_Portfolio/blob/main/Projects/Sakhi_Autos_Kotli/Sakhi_Autos_Kotli.PNG?raw=true" alt="Address of Sakhi Autos Kotli">
       </div>
